--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>π 搜尋器</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>測試成功！</h1>
-  <p>這是第一個 HTML 頁面。</p>
+  <h1>🔍 π 百萬位數搜尋</h1>
+  <p>輸入任意數字（例如你的生日、手機號碼）來查 π 的小數點後 100 萬位中是否出現：</p>
+  <input type="text" id="searchInput" placeholder="例如 0424" />
+  <button onclick="searchInPi()">搜尋</button>
+  <pre id="resultArea"></pre>
+  <script src="script.js"></script>
 </body>
 </html>
