--- a/index.html
+++ b/index.html
@@ -2,15 +2,42 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>π 搜尋器</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>π 百萬位數搜尋</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>🔍 π 百萬位數搜尋</h1>
   <p>輸入任意數字（例如你的生日、手機號碼）來查 π 的小數點後 100 萬位中是否出現：</p>
-  <input type="text" id="searchInput" placeholder="例如 0424" />
+
+  <input
+    type="tel"
+    id="searchInput"
+    inputmode="numeric"
+    pattern="[0-9]*"
+    placeholder="例如 0424"
+  />
   <button onclick="searchInPi()">搜尋</button>
+
+  <div style="margin-top:10px;">
+    <label for="fontSizeSlider">字體大小：</label>
+    <input type="range" id="fontSizeSlider" min="14" max="28" value="18" />
+    <span id="fontSizeValue">18</span> px
+  </div>
+
   <pre id="resultArea"></pre>
+
   <script src="script.js"></script>
+  <script>
+    const resultArea = document.getElementById("resultArea");
+    const slider = document.getElementById("fontSizeSlider");
+    const sizeValue = document.getElementById("fontSizeValue");
+
+    slider.addEventListener("input", function () {
+      const fontSize = slider.value;
+      sizeValue.textContent = fontSize;
+      resultArea.style.fontSize = fontSize + "px";
+    });
+  </script>
 </body>
 </html>
