--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   />
   <button onclick="searchInPi()">搜尋</button>
 
-  <div style="margin-top:10px;">
+  <div class="slider-container">
     <label for="fontSizeSlider">字體大小：</label>
     <input type="range" id="fontSizeSlider" min="14" max="28" value="18" />
     <span id="fontSizeValue">18</span> px
