--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1 class="title">🔍 π 百萬位數搜尋</h1>
-  <p class="description">輸入任意數字（例如你的生日、手機號碼）來查 π 的小數點後 100 萬位中是否出現：</p>
+  <p class="description">
+    輸入任意數字（例如你的生日、手機號碼）來查 π 的小數點後 100 萬位中是否出現：
+  </p>
 
   <input
     type="tel"
@@ -19,13 +21,24 @@
   />
   <button onclick="searchInPi()">搜尋</button>
 
-  <div class="slider-container">
+  <div style="margin-top:10px;">
     <label for="fontSizeSlider">字體大小：</label>
     <input type="range" id="fontSizeSlider" min="14" max="28" value="18" />
     <span id="fontSizeValue">18</span> px
   </div>
 
   <pre id="resultArea"></pre>
+
+  <!-- 影片彈窗 -->
+  <div id="videoModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <video id="popupVideo" controls>
+        <source src="123.mp4" type="video/mp4" />
+        您的瀏覽器不支援影片播放。
+      </video>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
