--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1 class="title">🔍 π 百萬位數搜尋</h1>
   <p class="description">
-    輸入任意數字（例如你的生日、手機號碼）來查 π 的小數點後 100 萬位（含整數）中是否出現：
+    輸入任意數字（例如你的生日、手機號碼）來查 π 的前 1,000,000 位（含整數）中是否出現：
   </p>
 
   <input
@@ -29,7 +29,7 @@
 
   <pre id="resultArea"></pre>
 
-  <!-- Easter Egg Modal -->
+  <!-- Easter Egg Modal（預設隱藏） -->
   <div id="videoModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
