--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <pre id="resultArea"></pre>
 
-  <!-- Easter Egg Modal（預設隱藏，使用 hidden 屬性） -->
+  <!-- 影片彩蛋 Modal（預設隱藏） -->
   <div id="videoModal" class="modal" hidden>
     <div class="modal-content">
       <span class="close">&times;</span>
@@ -37,6 +37,14 @@
         <source src="123.mp4" type="video/mp4">
         您的瀏覽器不支援影片播放。
       </video>
+    </div>
+  </div>
+
+  <!-- 圖片彩蛋 Modal（預設隱藏） -->
+  <div id="imageModal" class="modal" hidden>
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="popupImage" src="456.jfif" alt="彩蛋圖片">
     </div>
   </div>
 
